= MagLev Change Log

  For more precise details see: http://bit.ly/d3C6S1

== Changes for 24167  2010-08-27 

* Fix Trac 781, 782, 783
* Fix bugs in Marshal that affected Rails
* Fix bugs affecting Rails routing
* Back out patch to rack-mount now that 782 is fixed
* Fix bug in StringScanner#skip_until
* Fix bug for ruby gems tar_writer
* We're making a lot of changes to the underlying GemStone system.
  That's easy to tell because the MagLev version number is actually
  the GemStone 3.0 SVN revision number. The version.txt file and
  the MagLev git repository commit log tell the whole story.

== Changes for 24067  2010-08-13

* Support for running Rails 3.0.0.rc (previous support was for 3.0.0.beta4)
* Fix Trac 778, 779
* Fix file,line args to eval
* Fix bug in File#expand_path
* Dir[] now allows multiple patterns
* Fixed some bugs in YAML/Psych
* Extensive fixes and updates to the underlying GemStone 3.0 system

== Changes for 23981  2010-08-06

* Fix Trac 773, 775
* Fix result checking of Iconv.create in iconv.rb (fixes Trac 774)
* Fix various spec failures in URI, Dir, Env, File, Integer#times .
* Fairly extensive fixes and changes to the underlying GemStone 3.0 system
* Daniels Starling's latest KD-Tree update

== Changes for 23913  2010-07-28

* Fix Trac 768, 769, 770, 771, 772
* Optimization - creating new Struct class uses fixed instVars where possible.
* Fix problems in Hash#delete, some optimizations in Hash.
* Some speedup of eval.
* Added new Topaz commands: IMPLEMENTORS, STRINGS, STRINGSIC, SENDERS, HISTORY
* Fixed failing Digest specs
* Optimizes some Ruby String to Integer conversions
* Fixes some problems with Rails routes
* More optimizations and bugfixes in underlying GemStone 3.0 system

== Changes for 23832  2010-07-16

* Update examples/rails/README.rdoc and patch myapp.  MagLev supports a lot
  more functionality with Rails, now that Kernel#exec is implemented.
  MagLev can create a default app, generate controllers, and start the