@@ -1,5 +1,0 @@
-class HomeController < ApplicationController
-  def index
-  end
-
-end
