@@ -1,4 +1,0 @@
-<h1>Home#index</h1>
-<p>Hello from <%= RUBY_ENGINE %> <%= RUBY_VERSION %></p>
-<p>It is now <%= Time.now %>.</p>
-<p>Find me in app/views/home/index.html.erb</p>
