@@ -2,7 +2,12 @@
 
   For more precise details see: http://bit.ly/d3C6S1
 
-== Changes for 24167  2010-08-27 
+== Unreleased Changes
+
+* Update examples/rails from Rails 3.0.0.rc to Rails 3.0.0 final.
+* example/rails/Rakefile now uses bundler to install rails gems.
+
+== Changes for 24167  2010-08-27
 
 * Fix Trac 781, 782, 783
 * Fix bugs in Marshal that affected Rails
